--- a/HTML/home_desgin.html
+++ b/HTML/home_desgin.html
@@ -18,6 +18,7 @@
 		<li><a href="#">Dinning</a></li>
 		<li><a href="#">Kitchen</a></li>
 		<li><a href="#">Backyard</a></li>
+		<li><a href="#">Contact Us</a></li>
 	</ul>
 	<main>
 		<h1>DESIGN YOUR HOME</h1>
