deleted some files

--- a/HTML/Website.html
+++ b/HTML/Website.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<header>
-	<img src="img/shopping-bag.svg">
+	<img src="Img/shopping-bag.svg">
 	<span>Ecommerce</span>
 	<ul>
 		<li><a href="#">Home</a></li>
